--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,59 @@
+amqp==2.5.2
 asgiref==3.2.5
 astroid==2.3.3
+attrs==19.3.0
+Automat==20.2.0
+beautifulsoup4==4.8.2
+billiard==3.6.3.0
+celery==4.4.1
+certifi==2019.11.28
+cffi==1.14.0
+chardet==3.0.4
+colorama==0.4.3
+configparser==4.0.2
+constantly==15.1.0
+crayons==0.3.0
+cryptography==2.8
+cssselect==1.1.0
 Django==3.0.4
+hyperlink==19.0.0
+idna==2.9
+importlib-metadata==1.5.0
+incremental==17.5.0
 isort==4.3.21
+kombu==4.6.8
 lazy-object-proxy==1.4.3
+lxml==4.5.0
 mccabe==0.6.1
+numpy==1.18.1
+pandas==1.0.1
+parsel==1.5.2
+Protego==0.1.16
 psycopg2-binary==2.8.4
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+PyDispatcher==2.0.5
+PyHamcrest==2.0.2
 pylint==2.4.4
+pyOpenSSL==19.1.0
+python-dateutil==2.8.1
 pytz==2019.3
+queuelib==1.5.0
+redis==3.4.1
+requests==2.23.0
+Scrapy==2.0.0
+selenium==3.141.0
+service-identity==18.1.0
 six==1.14.0
+soupsieve==2.0
 sqlparse==0.3.1
+Twisted==19.10.0
 typed-ast==1.4.1
+urllib3==1.25.8
+vine==1.3.0
+w3lib==1.21.0
+webdriver-manager==2.3.0
 wrapt==1.11.2
+zipp==3.1.0
+zope.interface==4.7.2
