--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,9 @@ constantly==15.1.0
 crayons==0.3.0
 cryptography==2.8
 cssselect==1.1.0
+dj-database-url==0.5.0
 Django==3.0.4
+django-heroku==0.3.1
 hyperlink==19.0.0
 idna==2.9
 importlib-metadata==1.5.0
@@ -29,6 +31,7 @@ numpy==1.18.1
 pandas==1.0.1
 parsel==1.5.2
 Protego==0.1.16
+psycopg2==2.7.5
 psycopg2-binary==2.8.4
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
@@ -54,6 +57,7 @@ urllib3==1.25.8
 vine==1.3.0
 w3lib==1.21.0
 webdriver-manager==2.3.0
+whitenoise==5.0.1
 wrapt==1.11.2
 zipp==3.1.0
 zope.interface==4.7.2
