--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ cssselect==1.1.0
 dj-database-url==0.5.0
 Django==3.0.4
 django-heroku==0.3.1
+gunicorn==20.0.4
 hyperlink==19.0.0
 idna==2.9
 importlib-metadata==1.5.0
