--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 amqp==2.5.2
+appnope==0.1.0
 asgiref==3.2.5
 astroid==2.3.3
 attrs==19.3.0
 Automat==20.2.0
+autopep8==1.5
+backcall==0.1.0
 beautifulsoup4==4.8.2
 billiard==3.6.3.0
+bleach==3.1.1
 celery==4.4.1
 certifi==2019.11.28
 cffi==1.14.0
@@ -15,50 +19,97 @@ constantly==15.1.0
 crayons==0.3.0
 cryptography==2.8
 cssselect==1.1.0
+cycler==0.10.0
+decorator==4.4.2
+defusedxml==0.6.0
 dj-database-url==0.5.0
 Django==3.0.4
+django-extensions==2.2.8
 django-heroku==0.3.1
+entrypoints==0.3
 gunicorn==20.0.4
 hyperlink==19.0.0
 idna==2.9
 importlib-metadata==1.5.0
 incremental==17.5.0
+ipykernel==5.1.4
+ipython==7.13.0
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
 isort==4.3.21
+jedi==0.16.0
+Jinja2==2.11.1
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==6.0.0
+jupyter-console==6.1.0
+jupyter-core==4.6.3
+kiwisolver==1.1.0
 kombu==4.6.8
 lazy-object-proxy==1.4.3
+lesscpy==0.14.0
 lxml==4.5.0
+MarkupSafe==1.1.1
+matplotlib==3.2.0
 mccabe==0.6.1
+mistune==0.8.4
+nbconvert==5.6.1
+nbformat==5.0.4
+notebook==6.0.3
 numpy==1.18.1
 pandas==1.0.1
+pandocfilters==1.4.2
 parsel==1.5.2
+parso==0.6.2
+pexpect==4.8.0
+pickleshare==0.7.5
+ply==3.11
+prometheus-client==0.7.1
+prompt-toolkit==3.0.4
 Protego==0.1.16
 psycopg2==2.7.5
 psycopg2-binary==2.8.4
+ptyprocess==0.6.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycodestyle==2.5.0
 pycparser==2.20
 PyDispatcher==2.0.5
+Pygments==2.6.1
 PyHamcrest==2.0.2
 pylint==2.4.4
 pyOpenSSL==19.1.0
+pyparsing==2.4.6
+pyrsistent==0.15.7
 python-dateutil==2.8.1
 pytz==2019.3
+pyzmq==19.0.0
+qtconsole==4.7.1
+QtPy==1.9.0
 queuelib==1.5.0
 redis==3.4.1
 requests==2.23.0
 Scrapy==2.0.0
 selenium==3.141.0
+Send2Trash==1.5.0
 service-identity==18.1.0
 six==1.14.0
 soupsieve==2.0
 sqlparse==0.3.1
+terminado==0.8.3
+testpath==0.4.4
+tornado==6.0.4
+traitlets==4.3.3
 Twisted==19.10.0
 typed-ast==1.4.1
 urllib3==1.25.8
 vine==1.3.0
 w3lib==1.21.0
+wcwidth==0.1.8
 webdriver-manager==2.3.0
+webencodings==0.5.1
 whitenoise==5.0.1
+widgetsnbextension==3.5.1
 wrapt==1.11.2
 zipp==3.1.0
 zope.interface==4.7.2
